--- a/VideoGameCollection/VideoGameMVCLayer/Views/Home/About.cshtml
+++ b/VideoGameCollection/VideoGameMVCLayer/Views/Home/About.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
 <p>The goal of this site is to contain a list of every video game ever made, and to help people keep track of which ones they have.</p>
